# exact-xyz

./: .clang-format  .clang-tidy  .clangd  .cursorrules  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bindings/: __init__.py  python_bindings.cpp  setup.py  xyz.cpp
data/: input.qasm  output.json
data/qasm/: tof_3_opt.qasm
include/: arch.hpp  cmdline.hpp  json.hpp  prepare-state.hpp  qcircuit.hpp  qgate.hpp  qstate.hpp  solvers.hpp  synthesis.hpp  transpile.hpp  unitary.hpp  xyz.hpp  zoned_arch.hpp
lib/: CMakeLists.txt  arch.cpp  decompose.cpp  decomposition.cpp  layout_synthesis.cpp  linear_algebra.cpp  parse_arch.cpp  parse_config.cpp  prepare-auto.cpp  prepare-bfs.cpp  prepare-dense.cpp  prepare-sparse.cpp  prepare-structured.cpp  prepare_auto.cpp  prepare_bfs.cpp  prepare_dense.cpp  prepare_general.cpp  prepare_sparse.cpp  prepare_state.cpp  prepare_structured.cpp  qcircuit.cpp  qgate.cpp  qstate.cpp  resyn.cpp  simulator.cpp  transpile.cpp  unitary.cpp  winodw_resyn.cpp  zoned_arch.cpp
lib/qgate/: CMakeLists.txt  c.cpp  cry.cpp  cx.cpp  qgate.cpp  r.cpp  ry.cpp  u.cpp  x.cpp
scripts/: compare_qualtran.py  exp.py  experiment_gate_counts.py  install.sh  plot.py  qualtran_wrapper.py  simulate_clifford_t.py  xyz_wrapper.py
tests/: CMakeLists.txt  qgates.cpp  test.cpp
tests/xyz/: fuzz_prepare_state.cpp  qgate.cpp  state_test_utils.hpp  test_prepare_dense_simple.cpp  test_prepare_dense_state.cpp  test_prepare_dicke_state.cpp  test_prepare_ghz_state.cpp  test_prepare_sparse_state.cpp  test_prepare_w_state.cpp  test_resyn.cpp
thrid-party/: cmdline.hpp
tools/: CMakeLists.txt  backend.cpp  evaluate.cpp  layout_synthesis.cpp  main.cpp  prepare_dicke.cpp  prepare_single.cpp  prepare_state.cpp  sparse_state.cpp  state_simulation.cpp  t_reduction.cpp  transpile_clifford_t.cpp
